--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     background-color: #515c6b;
     flex-direction: column;
+    margin: 0;
 }
 
 button {
@@ -53,8 +54,7 @@ button {
 }
 
 .preview-left {
-    background-color: red;
-    flex-basis: 400px;
+    width: 300px;
     margin-left: 10%;
     flex: 1;
     display: flex;
@@ -62,8 +62,9 @@ button {
 }
 
 .preview-left h1 {
+    font-family: "Cormorant", serif;
     font-size: 48px;
-    font-weight: 900;
+    font-weight: 500;
     margin: 0px;
 }
 
@@ -98,4 +99,78 @@ button {
 
 .preview-right h4 {
     color: white;
+}
+
+.certified-reviews {
+    background-color: rgb(250, 250, 250);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.certified-reviews h3 {
+    font-size: 30px;
+    margin-bottom: 0;
+}
+
+.card-container {
+    height: 300px;
+    width: 800px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 100px;
+}
+
+.cards {
+    width: 100px;
+    flex: 1;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    gap: 10px;
+}
+
+.card {
+    height: 120px;
+    width: 120px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #3882F6;
+    box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.13);
+}
+
+.card-text {
+    flex: 1;
+    text-align: center;
+    font-size: 18px;
+}
+
+.quote {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    background-color:rgb(233, 233, 233)
+}
+
+.quote-container {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote p {
+    font-weight: 100;
+    font-style: italic;
+    margin: 0;
+    width: 745px;
+    font-size: 36px;
+}
+
+.quote h4 {
+    margin: 0;
+    align-self: flex-end;
+    font-size: 22px;
 }
